--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <script src="https://kit.fontawesome.com/b1c25c50a2.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/wavesurfer.js"></script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
